rsfg/tests/scripts/error/mismatched-type.sfg
fn main()
	one(5)

fn one(x: str)

